--- a/settings.conf
+++ b/settings.conf
@@ -13,6 +13,8 @@ zXXXXXXXXXXXXXXX
 444
 1
 1
+1
+
 
 
 #1-TOKEN
@@ -30,3 +32,4 @@ zXXXXXXXXXXXXXXX
 #13-период инициализации (в прогонах)
 #14-уровень логирования (0-info;1-debug)
 #15-сообщать при старте в telegram (0-нет, 1-да)
+#16-при обработке времени (если указывается timestamp)
