--- a/settings.conf
+++ b/settings.conf
@@ -14,7 +14,7 @@ zXXXXXXXXXXXXXXX
 1
 1
 timestamp
-
+9087
 
 
 #1-TOKEN
@@ -33,3 +33,4 @@ timestamp
 #14-уровень логирования (0-info;1-debug)
 #15-сообщать при старте в telegram (0-нет, 1-да)
 #16-при обработке времени (если указывается timestamp)
+#17-port bot alert API
