--- a/settings.conf
+++ b/settings.conf
@@ -15,7 +15,7 @@ zXXXXXXXXXXXXXXX
 1
 timestamp
 9087
-
+1.2.3.4
 
 #1-TOKEN
 #2-чат (-123456789  ==> z123456789), если нет значения, не оповещается
@@ -34,3 +34,4 @@ timestamp
 #15-сообщать при старте в telegram (0-нет, 1-да)
 #16-при обработке времени (если указывается timestamp)
 #17-port bot alert API
+#18-ip адрес сервера размещения
