--- a/settings.conf
+++ b/settings.conf
@@ -16,10 +16,14 @@ zXXXXXXXXXXXXXXX
 timestamp
 9087
 1.2.3.4
+1
+2
 
+
+#ВНИМАНИЕ! на каждый канал оповещения нужно заводить keepalive алерт, кот будет всегда в сработанных, severity: keepalive (фикс бага алертменеджера)
 #1-TOKEN
 #2-чат (-123456789  ==> z123456789), если нет значения, не оповещается
-#3-Alerting mode, сообщения: 1- выплевывать сразу, 0- скрыть до job
+#3-Alerting mode, сообщения: 1- выплевывать сразу, 0- скрыть по job (только для telegram)
 #4-мили-секунд между проверками
 #5-прокси
 #6-прогонов до отзыва от ресурса/прокси
@@ -32,6 +36,8 @@ timestamp
 #13-период инициализации (в прогонах)
 #14-уровень логирования (0-info;1-debug)
 #15-сообщать при старте в telegram (0-нет, 1-да)
-#16-при обработке времени (если указывается timestamp)
+#16-при обработке времени (если указывается timestamp либо пустая строка)
 #17-port bot alert API
 #18-ip адрес сервера размещения
+#19-включение (1), выключение (0) показ спец картинок в уведомлениях о проблемах и решениях (&#10060;)(&#9989)
+#20-включение, выключение (0) показ спец картинок в уведомлениях о проблемах (1) и решениях (2) severity (&#9898;)(&#x1F7E1;)(&#x1F7E0;)(&#128308;)(&#128996;)
