--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,5 @@
 XXXXXXXXXX:XXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-zXXXXXXXXXXXXXXX
+zXXXXXXXXX zXXXXXXXXX zXXXXXXXXX zXXXXXXXXX zXXXXXXXXX
 1
 1000
 
@@ -22,7 +22,7 @@ timestamp
 
 #ВНИМАНИЕ! на каждый канал оповещения нужно заводить keepalive алерт, кот будет всегда в сработанных, severity: keepalive (фикс бага алертменеджера)
 #1-TOKEN
-#2-чат (-123456789  ==> z123456789), если нет значения, не оповещается
+#2-чат (-123456789 ==> z123456789), если нет значения, не оповещается (если значений несколько, то бот в messenger отправляет всем, но 1 managed)
 #3-Alerting mode, сообщения: 1- выплевывать сразу, 0- скрыть по job (только для telegram)
 #4-мили-секунд между проверками
 #5-прокси
