--- a/settings.conf
+++ b/settings.conf
@@ -17,7 +17,7 @@ timestamp
 9087
 1.2.3.4
 1
-2
+1
 
 
 #ВНИМАНИЕ! на каждый канал оповещения нужно заводить keepalive алерт, кот будет всегда в сработанных, severity: keepalive (фикс бага алертменеджера)
@@ -39,5 +39,5 @@ timestamp
 #16-при обработке времени (если указывается timestamp либо пустая строка)
 #17-port bot alert API
 #18-ip адрес сервера размещения
-#19-включение (1), выключение (0) показ спец картинок в уведомлениях о проблемах и решениях (&#10060;)(&#9989)
-#20-включение, выключение (0) показ спец картинок в уведомлениях о проблемах (1) и решениях (2) severity (&#9898;)(&#x1F7E1;)(&#x1F7E0;)(&#128308;)(&#128996;)
+#19-включение (1), выключение (0) показа спец картинок в уведомлениях о проблемах и решениях (&#10060;)(&#9989)
+#20-включение(1), выключение (0),(2-severity текстом) показа спец картинок severity (&#9898;)(&#x1F7E1;)(&#x1F7E0;)(&#128308;)(&#128996;)
