--- a/settings.conf
+++ b/settings.conf
@@ -18,7 +18,13 @@ timestamp
 1.2.3.4
 1
 1
+http://1.2.3.4:9090/api/v1/alerts
+groupp
+admins2
+1
 
+00:00:00
+09:00:00
 
 
 
@@ -47,3 +53,16 @@ timestamp
 #21-Prometheus alerts API (URL/api/v1/alerts), если указан, Alertmanager не используется!
 #22-Prometheus alerts API идентификатор (label) по которому будет просматриваться вывод api (указывается в labels alert.rules)
 #23-Prometheus alerts API чему равен этот label
+#24-тихий режим по ночам 0-выключен, 1-включен (оповещения в телеграм только по severity:high+disaster)
+#25-резерв
+#26-время начала тихого режима (24)
+#27-время окончания тихого режима (24)
+
+
+
+#severity:
+#info
+#warning
+#average
+#high
+#disaster
