--- a/settings.conf
+++ b/settings.conf
@@ -50,7 +50,7 @@ admins2
 #18-ip адрес сервера размещения
 #19-включение (1), выключение (0) показа спец картинок в уведомлениях о проблемах и решениях (&#10060;)(&#9989)
 #20-включение(1), выключение (0),(2-severity текстом) показа спец картинок severity (&#9898;)(&#x1F7E1;)(&#x1F7E0;)(&#128308;)(&#128996;)
-#21-Prometheus alerts API (URL/api/v1/alerts), если указан, Alertmanager не используется!
+#21-Prometheus alerts API (URL/api/v1/alerts), если указан, Alertmanager не используется! Рекомендуется!
 #22-Prometheus alerts API идентификатор (label) по которому будет просматриваться вывод api (указывается в labels alert.rules)
 #23-Prometheus alerts API чему равен этот label
 #24-тихий режим по ночам 0-выключен, 1-включен (оповещения в телеграм только по severity:high+disaster)
