--- a/settings.conf
+++ b/settings.conf
@@ -6,7 +6,7 @@ zXXXXXXXXX zXXXXXXXXX zXXXXXXXXX zXXXXXXXXX zXXXXXXXXX
 10
 0
 1
-/usr/share/abot2/
+10000
 1
 12345
 2
@@ -38,7 +38,7 @@ admins2
 #6-прогонов до отзыва от ресурса/прокси
 #7-bot works as messenger (1), managed bot (0) 
 #8-рассылка email (0-выкл, 1-вкл. list_mail.txt)
-#9-путь по умолчанию
+#9-ID alert start (по умолчанию 10000)
 #10-направление логов (=1 STDOUT, =0 logfile)
 #11-uuid bot (менять каждому боту)
 #12-задержка проверки апи (сек.)
