--- a/settings.conf
+++ b/settings.conf
@@ -25,7 +25,14 @@ admins2
 
 00:00:00
 09:00:00
-
+h
+job
+status
+del
+cd
+on
+off
+testmail
 
 
 
@@ -57,6 +64,16 @@ admins2
 #25-резерв
 #26-время начала тихого режима (24)
 #27-время окончания тихого режима (24)
+#команды управления ботом
+#28-вывод информации о возможностях бота (/h)
+#29-незакрытые проблемы (/job)
+#30-статус состояния бота (/status)
+#31-удалить из задач нотификацию (/del N)
+#32-Очистить лист удаленных нотификаций (/cd)
+#33-/on Включекние тихого режима (без оповещений), замьютить
+#34- /off Выключекние тихого режима (без оповещений), размьютить
+#35- /testmail проверка отправки уведомлений по почте
+
 
 
 
