--- a/settings.conf
+++ b/settings.conf
@@ -22,7 +22,7 @@ http://1.2.3.4:9090/api/v1/alerts
 groupp
 admins2
 1
-
+3
 00:00:00
 09:00:00
 h
@@ -61,7 +61,7 @@ testmail
 #22-Prometheus alerts API идентификатор (label) по которому будет просматриваться вывод api (указывается в labels alert.rules)
 #23-Prometheus alerts API чему равен этот label
 #24-тихий режим по ночам 0-выключен, 1-включен (оповещения в телеграм только по severity:high+disaster)
-#25-резерв
+#25-------------при недоступности API Prometheus присылать сообщение в бот о недоступности каждые __ мин., если 0 - не присылать------
 #26-время начала тихого режима (24)
 #27-время окончания тихого режима (24)
 #команды управления ботом
