--- a/docker/settings.conf
+++ b/docker/settings.conf
@@ -1,5 +1,5 @@
-6206423874:AAGtxJn7tu4cxQU6Prt6m0OevyrJl_LkRJk
-z1001985444320
+XXXXXXXXX
+zYYYYYYYYYY
 1
 1000
 
@@ -8,7 +8,7 @@ z1001985444320
 0
 10000
 1
-tMB4
+BBBBBBBBBBBBBBBBBBBBBBB
 2
 600
 1
