--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,5 @@
-6206423874:AAGtxJn7tu4cxQU6Prt6m0OevyrJl_LkRJk
-z1001985444320
+XXXXXXXXXXXXXXXXXXX
+zYYYYYYYYYYYYYYYYYYYYYY
 1
 1000
 
@@ -8,7 +8,7 @@ z1001985444320
 0
 10000
 1
-tMB4
+BBBBBBBBBBBBBBBBBBBBBBB
 2
 600
 1
@@ -97,7 +97,7 @@ conf1
 #46-Выключекние тихого режима (без оповещений /off), не показывать уведомления
 #47-Проверка отправки уведомлений по почте (/testmail)
 #48-команда автоматическиx хелсчеков бота в чат, настройка в конфиге и командой (команда по умолчанию /hс on -по умолчанию 5 минут)
-#49-mute команда работы со звуком уведомлений (/mute on|off|mask *|all|status|sys|papi|hc|mask|rm alerts|resolves)
+#49-mute команда работы со звуком уведомлений (/mute)
 #50-команда установок Prome API (/papi on|off _ по умолчанию 5 минут)
 #51-команда конфигурации бота на лету (/conf A B; где A - номер строки, B-значение)
 
