--- a/settings.conf
+++ b/settings.conf
@@ -7,7 +7,7 @@ zYYYYYYYYYYYYYYYYYYYYYY
 0
 0
 10000
-1
+0.5
 BBBBBBBBBBBBBBBBBBBBBBB
 2
 600
@@ -54,15 +54,15 @@ conf1
 #1-TOKEN
 #2-чат (-123456789 ==> z123456789), если нет значения, не оповещается (если значений несколько, то бот в messenger отправляет всем, но 1 managed)
 #3-Alerting mode, сообщения: 1- выплевывать сразу, 0- скрыть по job (только для telegram)
-#4-мили-секунд между проверками телеги
+#4-секунд между проверками телеги (trbot, по умолчанию 1)
 #5-прокси, при наличии
 #6-прогонов до отзыва от ресурса/прокси
 #7-bot works as messenger (1), managed bot (0) 
 #8-рассылка email (0-выкл, 1-вкл. list_mail.txt)
 #9-ID alert start (по умолчанию 10000)
-#10-направление логов (=1 STDOUT, =0 logfile)
+#10-период проверки sender на рассылку,сек (по умолчанию 0.5)
 #11-uuid bot (имя менять каждому боту)
-#12-задержка проверки апи (сек.)
+#12-задержка проверки апи prometheus (abot3 в сек.)
 #13-период инициализации (в прогонах)
 #14-уровень логирования (0-info;1-debug)
 #15-сообщать при старте в telegram (0-нет, 1-да)
