--- a/settings.conf
+++ b/settings.conf
@@ -1,16 +1,16 @@
-XXXXXXXXXXXXXXXXXXX
-zYYYYYYYYYYYYYYYYYYYYYY
+XXXXXXXXXXXXXXXXXXXXXXx
+zYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
 1
-1000
+1
 
 10
 0
 0
 10000
 0.5
-BBBBBBBBBBBBBBBBBBBBBBB
+NNNNNNNNNNNNNNNNNNNNNN
 2
-600
+444
 1
 1
 timestamp
@@ -37,18 +37,18 @@ admins1
 
 
 
-h1
-job1
-status1
-del1
-cd1
-on1
-off1
-testmail1
-hc1
-mute1
-papi1
-conf1
+h
+job
+status
+del
+cd
+on
+off
+testmail
+hc
+mute
+papi
+conf
 
 
 #1-TOKEN
@@ -60,7 +60,7 @@ conf1
 #7-bot works as messenger (1), managed bot (0) 
 #8-рассылка email (0-выкл, 1-вкл. list_mail.txt)
 #9-ID alert start (по умолчанию 10000)
-#10-период проверки sender на рассылку,сек (по умолчанию 0.5)
+#10-период между отправками sender,сек (по умолчанию 0.5)
 #11-uuid bot (имя менять каждому боту)
 #12-задержка проверки апи prometheus (abot3 в сек.)
 #13-период инициализации (в прогонах)
@@ -97,7 +97,7 @@ conf1
 #46-Выключекние тихого режима (без оповещений /off), не показывать уведомления
 #47-Проверка отправки уведомлений по почте (/testmail)
 #48-команда автоматическиx хелсчеков бота в чат, настройка в конфиге и командой (команда по умолчанию /hс on -по умолчанию 5 минут)
-#49-mute команда работы со звуком уведомлений (/mute)
+#49-mute команда работы со звуком уведомлений (/mute on|off|mask *|all|status|sys|papi|hc|mask|rm alerts|resolves)
 #50-команда установок Prome API (/papi on|off _ по умолчанию 5 минут)
 #51-команда конфигурации бота на лету (/conf A B; где A - номер строки, B-значение)
 
