--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,5 @@
-XXXXXXXXXXXXXXXXXXXXXXx
-zYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
+XXXXXXXXXXXXXXXX:YYYYYYYYYYYYYYYYYYYYYYYYYYY
+zZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ
 1
 1
 
@@ -7,18 +7,18 @@ zYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
 0
 0
 10000
-0.5
-NNNNNNNNNNNNNNNNNNNNNN
-2
-444
+1
+NAMEBOT
+10
+600
 1
 1
 timestamp
-4
+0
 0
 1
 1
-http://192.168.4.5:9090/api/v1/alerts
+http://prometheus-server/api/v1/alerts
 groupp
 admins1
 1
@@ -33,13 +33,23 @@ admins1
 
 0
 
+smtp.mail.ru
+465
+who@mail.com
+WWWWWWWWWWWWWW
+1
+who1@mail.com who2@mail.com who3@mail.com
+
+
+
+
 
 
 
 
 h
 job
-status
+bs
 del
 cd
 on
@@ -58,7 +68,7 @@ conf
 #5-прокси, при наличии
 #6-прогонов до отзыва от ресурса/прокси
 #7-bot works as messenger (1), managed bot (0) 
-#8-рассылка email (0-выкл, 1-вкл. list_mail.txt)
+#8-уведомления по электронной почте (1-включено,0-выключено)
 #9-ID alert start (по умолчанию 10000)
 #10-период между отправками sender,сек (по умолчанию 0.5)
 #11-uuid bot (имя менять каждому боту)
@@ -82,24 +92,33 @@ conf
 #29-mute papi для недоступности API Prometheus #25 (0-mute off те звук включен, 1-mute on те звук вЫключен)---------
 #30-mute alerts, только алерты (0 - выключено, 1- включено)
 #31-mute resolv, только резолвы (0 - выключено, 1- включено)
-#32-mute mask alerts по маске (0 - выключено, 1- включено)
+#32-mute alerts mask по маске (0 - выключено, 1- включено)
 #33-mute mask alerts сама маска из #32 (1 2|3 4444 AND 6 7)
-#34-mute mask resolv по маске (0 - выключено, 1- включено)
+#34-mute resolv mask по маске (0 - выключено, 1- включено)
 #35-mute mask resolv сама маска из #34 (1 2|3 4444 AND 6 7)
+#36-SMTP сервер
+#37-SMTP port (465 def)
+#38-SMTP user
+#39-SMTP pass
+#40-прием алертов по электронной почте (1-включено,0-выключено)
+#41-кого уведомлять по электронке (1@mail.ru 2@mail.ru и тп, через пробел)
+
+
+
 
 #====команды управления ботом (пишется:/command)======
-#40-вывод информации о возможностях бота (/h)
-#41-незакрытые проблемы (/job)
-#42-статус состояния бота (/status)
-#43-удалить из задач нотификацию (/del N)
-#44-Очистить лист удаленных нотификаций (/cd)
-#45-Включекние тихого режима (без оповещений /on), показывать уведомления
-#46-Выключекние тихого режима (без оповещений /off), не показывать уведомления
-#47-Проверка отправки уведомлений по почте (/testmail)
-#48-команда автоматическиx хелсчеков бота в чат, настройка в конфиге и командой (команда по умолчанию /hс on -по умолчанию 5 минут)
-#49-mute команда работы со звуком уведомлений (/mute on|off|mask *|all|status|sys|papi|hc|mask|rm alerts|resolves)
-#50-команда установок Prome API (/papi on|off _ по умолчанию 5 минут)
-#51-команда конфигурации бота на лету (/conf A B; где A - номер строки, B-значение)
+#50-вывод информации о возможностях бота (/h)
+#51-незакрытые проблемы (/job)
+#52-статус состояния бота (/status)
+#53-удалить из задач нотификацию (/del N)
+#54-Очистить лист удаленных нотификаций (/cd)
+#55-Включекние тихого режима (без оповещений /on), показывать уведомления
+#56-Выключекние тихого режима (без оповещений /off), не показывать уведомления
+#57-Проверка отправки уведомлений по почте (/testmail)
+#58-команда автоматическиx хелсчеков бота в чат, настройка в конфиге и командой (команда по умолчанию /hс on -по умолчанию 5 минут)
+#59-mute команда работы со звуком уведомлений (/mute on|off|mask *|all|status|sys|papi|hc|mask|rm alerts|resolves)
+#60-команда установок Prome API (/papi on|off _ по умолчанию 5 минут)
+#61-команда конфигурации бота на лету (/conf A B; где A - номер строки, B-значение)
 
 
 #severity:
