--- a/settings.conf
+++ b/settings.conf
@@ -39,12 +39,12 @@ who@mail.com
 WWWWWWWWWWWWWW
 1
 who1@mail.com who2@mail.com who3@mail.com
-
-
-
-
-
-
+imap.yandex.ru
+993
+IMAP
+user@domen.ru
+programpass
+ssl
 
 
 h
@@ -102,8 +102,12 @@ conf
 #39-SMTP pass
 #40-прием алертов по электронной почте (1-включено,0-выключено)
 #41-кого уведомлять по электронке (1@mail.ru 2@mail.ru и тп, через пробел)
-
-
+#42-сервер входящей почты
+#43-порт сервера входящей почты
+#44-протокол получения писем
+#45-пользователь сервера получения писем
+#46-пароль пользователя сервера получения писем
+#47-SSL используется/отсутствие - нет
 
 
 #====команды управления ботом (пишется:/command)======
