--- a/settings.conf
+++ b/settings.conf
@@ -39,11 +39,11 @@ who@mail.com
 WWWWWWWWWWWWWW
 1
 who1@mail.com who2@mail.com who3@mail.com
-imap.yandex.ru
+imap.domain.ru
 993
 IMAP
-user@domen.ru
-programpass
+who777@mail.com
+WWWWWWWWWWWWWWW
 ssl
 
 
@@ -96,10 +96,12 @@ conf
 #33-mute mask alerts сама маска из #32 (1 2|3 4444 AND 6 7)
 #34-mute resolv mask по маске (0 - выключено, 1- включено)
 #35-mute mask resolv сама маска из #34 (1 2|3 4444 AND 6 7)
-#36-SMTP сервер
-#37-SMTP port (465 def)
-#38-SMTP user
-#39-SMTP pass
+#36-SMTP hostname 					(вкл выкл п8)
+#37-SMTP сервер:port (465 def)		(вкл выкл п8)
+#38-SMTP user						(вкл выкл п8)
+#39-SMTP pass						(вкл выкл п8)
+#40-прием алертов по электронной почте (1-включено,0-выключено)
+#41-кого уведомлять по электронке (1@mail.ru 2@mail.ru и тп, через пробел)
 #40-прием алертов по электронной почте (1-включено,0-выключено)
 #41-кого уведомлять по электронке (1@mail.ru 2@mail.ru и тп, через пробел)
 #42-сервер входящей почты
@@ -108,6 +110,7 @@ conf
 #45-пользователь сервера получения писем
 #46-пароль пользователя сервера получения писем
 #47-SSL используется/отсутствие - нет
+
 
 
 #====команды управления ботом (пишется:/command)======
