--- a/settings.conf
+++ b/settings.conf
@@ -45,7 +45,7 @@ IMAP
 who777@mail.com
 WWWWWWWWWWWWWWW
 ssl
-
+9044
 
 h
 job
@@ -110,7 +110,7 @@ conf
 #45-пользователь сервера получения писем
 #46-пароль пользователя сервера получения писем
 #47-SSL используется/отсутствие - нет
-
+#48-порт pushgateway для мониторинга prometheus (9044-9050)
 
 
 #====команды управления ботом (пишется:/command)======
