--- a/settings.conf
+++ b/settings.conf
@@ -59,8 +59,16 @@ hc
 mute
 papi
 conf
+mutej
 
 
+
+
+0
+1
+1
+
+#=================================================
 #1-TOKEN
 #2-чат (-123456789 ==> z123456789), если нет значения, не оповещается (если значений несколько, то бот в messenger отправляет всем, но 1 managed)
 #3-Alerting mode, сообщения: 1- выплевывать сразу, 0- скрыть по job (только для telegram)
@@ -111,14 +119,15 @@ conf
 #46-пароль пользователя сервера получения писем
 #47-SSL используется/отсутствие - нет
 #48-IP и порт pushgateway для мониторинга prometheus (127.0.0.1:9044-9050)
+#49-mutej mask сама маска из #62 (1 2|3 4444 AND 6 7)
 
 
 #====команды управления ботом (пишется:/command)======
 #50-вывод информации о возможностях бота (/h)
 #51-незакрытые проблемы (/job)
 #52-статус состояния бота (/status)
-#53-удалить из задач нотификацию (/del N)
-#54-Очистить лист удаленных нотификаций (/cd)
+#53-
+#54-
 #55-Включекние тихого режима (без оповещений /on), показывать уведомления
 #56-Выключекние тихого режима (без оповещений /off), не показывать уведомления
 #57-Проверка отправки уведомлений по почте (/testmail)
@@ -126,6 +135,12 @@ conf
 #59-mute команда работы со звуком уведомлений (/mute on|off|mask *|all|status|sys|papi|hc|mask|rm alerts|resolves)
 #60-команда установок Prome API (/papi on|off _ по умолчанию 5 минут)
 #61-команда конфигурации бота на лету (/conf A B; где A - номер строки, B-значение)
+#62-команда общий mute на выдачу сообщений в чат по алетртам (/mutej #49)
+#=====================================================
+#67-mutej (0 - выключено, 1- включено) #62 #49
+#68-отправка аннотаций (0 - выключено, 1- включено)
+#69-отправка webhook (0 - выключено, 1- включено)
+#=====================================================
 
 
 #severity:
