--- a/settings.conf
+++ b/settings.conf
@@ -137,7 +137,7 @@ mutej
 #62-команда общий mute на выдачу сообщений в чат по алетртам (/mutej #49)
 #=====================================================
 #67-mutej (0 - выключено, 1- включено) #62 #49
-#68-строка админов по username, кот могут управлять ботом через пробел, если пусто, то все админы (Evonic4 Evonic4 Evonic4)
+#68-строка админов по username, кот могут управлять ботом через пробел, если пусто, то все (username1 username2 username3)
 #=====================================================
 
 
