--- a/settings.conf
+++ b/settings.conf
@@ -50,7 +50,7 @@ ssl
 h
 job
 bs
-
+init
 
 on
 off
@@ -125,7 +125,7 @@ mutej
 #50-вывод информации о возможностях бота (/h)
 #51-незакрытые проблемы (/job)
 #52-статус состояния бота (/status)
-#53-
+#53-команда принудительной инициализации
 #54-
 #55-Включекние тихого режима (без оповещений /on), показывать уведомления
 #56-Выключекние тихого режима (без оповещений /off), не показывать уведомления
