--- a/settings.conf
+++ b/settings.conf
@@ -66,6 +66,8 @@ mutej
 
 0
 
+0
+
 
 #=================================================
 #1-TOKEN
@@ -76,7 +78,7 @@ mutej
 #6-прогонов до отзыва от ресурса/прокси
 #7-bot works as messenger (1), managed bot (0) 
 #8-уведомления по электронной почте (1-включено,0-выключено)
-#9-ID alert start (по умолчанию 10000)
+#9-ID alert start (по умолчанию 10000, не менее для идентичности!)
 #10-период между отправками sender,сек (по умолчанию 0.5)
 #11-uuid bot (имя менять каждому боту)
 #12-задержка проверки апи prometheus (abot3 в сек.)
@@ -109,17 +111,14 @@ mutej
 #39-SMTP pass						(вкл выкл п8)
 #40-прием алертов по электронной почте (1-включено,0-выключено)
 #41-кого уведомлять по электронке (1@mail.ru 2@mail.ru и тп, через пробел)
-#40-прием алертов по электронной почте (1-включено,0-выключено)
-#41-кого уведомлять по электронке (1@mail.ru 2@mail.ru и тп, через пробел)
 #42-сервер входящей почты
 #43-порт сервера входящей почты
 #44-протокол получения писем
 #45-пользователь сервера получения писем
 #46-пароль пользователя сервера получения писем
 #47-SSL используется/отсутствие - нет
-#48-IP и порт pushgateway для мониторинга prometheus (127.0.0.1:9044-9050)
+#48-IP и порт pushgateway для мониторинга prometheus (1.2.3.4:1234, если порты 9044-9050, то поднимается внутренний pushgateway)
 #49-mutej mask сама маска из #62 (1 2|3 4444 AND 6 7)
-
 
 #====команды управления ботом (пишется:/command)======
 #50-вывод информации о возможностях бота (/h)
@@ -138,7 +137,9 @@ mutej
 #=====================================================
 #67-mutej (0 - выключено, 1- включено) #62 #49
 #68-строка админов по username, кот могут управлять ботом через пробел, если пусто, то все (username1 username2 username3)
+#69-выводить нерезолвные алерты за время тихого режима #24 (0 - выключено, 1- включено) при выходе из тихого режима
 #=====================================================
+
 
 
 #severity:
