--- a/settings.conf
+++ b/settings.conf
@@ -117,7 +117,7 @@ mutej
 #45-пользователь сервера получения писем
 #46-пароль пользователя сервера получения писем
 #47-SSL используется/отсутствие - нет
-#48-IP и порт pushgateway для мониторинга prometheus (1.2.3.4:1234, если порты 9044-9050, то поднимается внутренний pushgateway)
+#48-IP и порт pushgateway для мониторинга prometheus (1.2.3.4:1234, если порты 9044, то поднимается внутренний pushgateway)
 #49-mutej mask сама маска из #62 (1 2|3 4444 AND 6 7)
 
 #====команды управления ботом (пишется:/command)======
