--- a/settings.conf
+++ b/settings.conf
@@ -67,7 +67,7 @@ mutej
 0
 
 0
-
+severity2
 
 #=================================================
 #1-TOKEN
@@ -88,11 +88,11 @@ mutej
 #16-при обработке времени (если указывается timestamp либо пустая строка)
 #17-автоматические хелсчеки бота в чат каждые ___ минут (0-отключено) (настройка командой /hc on -по умолчанию 5 минут; /health off; /health on 30; /health on 30 mute on; /health on 30 mute off)+++
 #18-mute hc автоматические хелсчеки бота в чат #17 (0-mute off те звук включен, 1-mute on те звук вЫключен)----------
-#19-включение (1), выключение (0) показа спец картинок в уведомлениях о проблемах и решениях (&#10060;)(&#9989)
+#19-включение (1), выключение (0) показа спец картинок в уведомлениях о проблемах и решениях (&#10060;)(&#9989;)
 #20-включение(1), выключение (0),(2-severity текстом) показа спец картинок severity (&#9898;)(&#x1F7E1;)(&#x1F7E0;)(&#128308;)(&#128996;)
 #21-Prometheus alerts API (URL/api/v1/alerts)
 #22-Prometheus alerts API идентификатор (label) по которому будет просматриваться вывод api (указывается в labels alert.rules)
-#23-Prometheus alerts API чему равен этот label
+#23-Prometheus alerts API чему равен этот label (по сути группа уведомлений)
 #24-тихий режим по ночам 0-выключен, 1-включен (оповещения в телеграм только по severity:high+disaster)
 #25-при недоступности API Prometheus присылать сообщение в чат о недоступности каждые __ мин. (если 0 - не присылать)--------
 #26-время начала тихого режима (24)
@@ -117,7 +117,7 @@ mutej
 #45-пользователь сервера получения писем
 #46-пароль пользователя сервера получения писем
 #47-SSL используется/отсутствие - нет
-#48-IP и порт pushgateway для мониторинга prometheus (1.2.3.4:1234, если порты 9044, то поднимается внутренний pushgateway)
+#48-IP и порт pushgateway для мониторинга prometheus (1.2.3.4:1234, если порты 9044-9050, то поднимается внутренний pushgateway)
 #49-mutej mask сама маска из #62 (1 2|3 4444 AND 6 7)
 
 #====команды управления ботом (пишется:/command)======
@@ -138,11 +138,12 @@ mutej
 #67-mutej (0 - выключено, 1- включено) #62 #49
 #68-строка админов по username, кот могут управлять ботом через пробел, если пусто, то все (username1 username2 username3)
 #69-выводить нерезолвные алерты за время тихого режима #24 (0 - выключено, 1- включено) при выходе из тихого режима
+#70-название label severity для стандартизации и допа alerta (severity: critical)
 #=====================================================
 
 
 
-#severity:
+#severity2:
 #info
 #warning
 #average
