--- a/settings.conf
+++ b/settings.conf
@@ -68,7 +68,7 @@ mutej
 
 0
 severity2
-
+event
 #=================================================
 #1-TOKEN
 #2-чат (-123456789 ==> z123456789), если нет значения, не оповещается (если значений несколько, то бот в messenger отправляет всем, но 1 managed)
@@ -138,7 +138,8 @@ severity2
 #67-mutej (0 - выключено, 1- включено) #62 #49
 #68-строка админов по username, кот могут управлять ботом через пробел, если пусто, то все (username1 username2 username3)
 #69-выводить нерезолвные алерты за время тихого режима #24 (0 - выключено, 1- включено) при выходе из тихого режима
-#70-название label severity для стандартизации и допа alerta (severity: critical)
+#70-название label severity для стандартизации и допа alerta (severity: 'critical', 'major', 'minor', 'warning', 'indeterminate', 'informational')
+#71-название label уникальное поле алерта (fingerprint), по умолчанию event (метка в блоке labels)
 #=====================================================
 
 
